--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@
 
 #leaderboard {
     background-color: white;
-    z-index: 1;
+    z-index: 2;
     display: none;
     list-style: none;
     position: absolute;
@@ -109,4 +109,74 @@
 
 #cut {
     z-index: 1;
+}
+
+#advancement {
+    border: 5px solid rgb(90, 90, 90);
+    border-radius: 12px;
+    background-color: rgb(35, 35, 35);
+    color: white;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    opacity: 0;
+    z-index: -1;
+    display: flex;
+    justify-content: space-between;
+}
+
+#advancement div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 10px;
+}
+
+#advancement img {
+    height: 40px;
+}
+
+#advancement p {
+    margin-bottom: 5px;
+    font-size: 20px;
+}
+
+#advancement-list {
+    background-color: white;
+    z-index: 2;
+    display: none;
+    list-style: none;
+    position: absolute;
+    margin-top: 10px;
+    right: 0;
+    border: 1px solid;
+}
+
+#advancement-list li {
+    color: white;
+    width: fit-content;
+    padding: 5px;
+    border: 1px solid;
+    margin: 5px;
+}
+
+#advancement-list div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    background-color: rgb(35, 35, 35);
+}
+
+#advancement-list img {
+    height: 40px;
+    margin: 0 5px 5px 0;
+}
+
+#advancement-list p {
+    margin-left: 0 !important;
+}
+
+#advancement-list p:nth-of-type(1) {
+    background-color: rgb(90, 90, 90);
 }
