--- a/style.css
+++ b/style.css
@@ -146,7 +146,6 @@
 }
 
 #advancement-list {
-    background-color: white;
     z-index: 2;
     display: none;
     position: absolute;
@@ -155,9 +154,32 @@
 }
 
 #advancement-list .advancement {
-    margin-bottom: 5px;
+    position: relative;
+    margin-top: 5px;
+}
+
+#advancement-list .advancement:nth-child(1) {
+    margin-top: 0;
 }
 
 #advancement-list p {
     margin-left: 0 !important;
+}
+
+#advancement-list .description {
+    width: 100%;
+    padding: 10px;
+    top: 100%;
+    display: none;
+    border: 5px solid rgb(90, 90, 90);
+    border-radius: 12px;
+    background-color: rgb(103, 103, 103);
+    color: white;
+    border-radius: 12px;
+    position: absolute;
+    z-index: 1;
+}
+
+#advancement-list .advancement:hover>.description {
+    display: block;
 }
