--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@
 }
 
 #leaderboard {
+    width: 200px;
     background-color: white;
     z-index: 2;
     display: none;
@@ -105,6 +106,13 @@
 
 #leaderboard li:nth-child(3) {
     background-color: #CD7F32;
+}
+
+#leaderboard a {
+    text-align: center;
+    width: 100%;
+    margin: 5px 0;
+    display: block;
 }
 
 #cut {
