--- a/style.css
+++ b/style.css
@@ -78,15 +78,18 @@
     font-size: 28px;
 }
 
-#leaderboard {
-    width: 200px;
-    background-color: white;
+.navbox {
     z-index: 2;
     display: none;
-    list-style: none;
     position: absolute;
     margin-top: 10px;
     right: 0;
+}
+
+#leaderboard {
+    width: 200px;
+    background-color: white;
+    list-style: none;
     border: 1px solid;
 }
 
@@ -152,14 +155,6 @@
     font-size: 20px;
 }
 
-#advancement-list {
-    z-index: 2;
-    display: none;
-    position: absolute;
-    margin-top: 10px;
-    right: 0;
-}
-
 .advancement {
     position: relative;
     margin-top: 5px;
@@ -189,4 +184,21 @@
 
 #advancement-list .advancement:hover>.description {
     display: block;
+}
+
+#chat-container {
+    width: 210px;
+}
+
+#chatbox {
+    list-style: none;
+    border: 1px solid;
+    padding: 5px;
+    margin-bottom: 5px;
+    word-wrap: break-word;
+    background-color: white;
+}
+
+#chat-container input {
+    padding: 2px;
 }
