--- a/style.css
+++ b/style.css
@@ -7,9 +7,8 @@
 
 #blur {
     z-index: 999;
-    display: none;
+    display: flex;
     position: absolute;
-    top: 0;
     width: 100vw;
     height: 100vh;
     opacity: 0.5;
@@ -44,47 +43,46 @@
     margin-top: 10px;
 }
 
-#container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#cut {
-    cursor: pointer;
-}
-
 #falling-animation {
     position: absolute;
     z-index: -1;
 }
 
-/* navbar */
-#nav {
-    padding: 10px;
+#point-add {
     position: absolute;
-    top: 0;
-    list-style: none;
-    display: flex;
-    width: 100vw;
-    justify-content: space-between;
+    pointer-events: none;
 }
 
-#nav>* {
+/* container */
+#container {
+    height: 100vh;
     display: flex;
-    justify-content: center;
+}
+
+#left {
+    width: 60%;
+}
+
+#nav {
+    padding: 10px;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#nav>div {
+    display: flex;
     align-items: center;
 }
 
-#nav div {
-    position: relative;
-}
-
-#nav p {
+#nav p,
+#nav input,
+#nav a {
     margin-left: 20px;
     cursor: default;
+    text-decoration: none;
+    color: black;
 }
 
 #point {
@@ -93,59 +91,86 @@
     font-weight: bold;
 }
 
-.navbox {
-    display: none;
-    position: absolute !important;
-    margin-top: 10px;
-    right: 0;
+#cut-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-ul.navbox {
-    list-style: none;
+#cut {
+    cursor: pointer;
+    user-select: none;
 }
 
-.navbox p {
-    margin-left: 0 !important;
+#right {
+    width: 40%;
 }
 
-/* leaderboard */
-#leaderboard {
-    width: 200px;
-    background-color: white;
-    border: 1px solid;
-}
-
-#leaderboard li {
+#right .tab {
+    cursor: pointer;
+    font-size: 15px;
+    border: none;
     padding: 10px;
-    border: 1px solid;
-    margin: 5px;
+    flex: 1;
 }
 
-#leaderboard li:nth-child(1) {
-    background-color: #FFD700;
+#right .tab:hover {
+    background-color: rgb(222, 222, 222);
 }
 
-#leaderboard li:nth-child(2) {
-    background-color: #C0C0C0;
+#right .tab.active {
+    background-color: rgb(176, 176, 176);
 }
 
-#leaderboard li:nth-child(3) {
-    background-color: #CD7F32;
+#unseen-chat {
+    display: none;
+    color: white;
+    font-size: 10px;
+    padding: 5px;
+    background-color: red;
+    border-radius: 50%;
+    margin-left: 2px;
 }
 
-#leaderboard a, #achievement-list a {
-    text-align: center;
+#right .box {
+    list-style: none;
+    display: none;
     width: 100%;
-    margin: 5px 0;
-    display: block;
+    height: 100%;
+    overflow-y: auto;
+    background-color: rgb(35, 35, 35);
+}
+
+/* stats & options */
+#stats-options {
+    color: white;
+    font-size: 18px;
+}
+
+#stats {
+    list-style: none;
+    padding: 10px;
+}
+
+#stats li {
+    margin-bottom: 5px;
+}
+
+
+#options {
+    padding: 10px;
+}
+
+#options div {
+    margin-bottom: 5px;
 }
 
 /* achievement */
 .achievement {
+    background-color: rgb(35, 35, 35);
     width: 350px;
     border: 5px solid rgb(90, 90, 90);
     border-radius: 12px;
-    background-color: rgb(35, 35, 35);
     color: white;
     padding: 10px;
     margin-top: 5px;
@@ -161,7 +186,7 @@ ul.navbox {
     justify-content: center;
 }
 
-.achievement img {
+.achievement .icon {
     width: 75px;
     margin-right: 10px;
 }
@@ -180,12 +205,18 @@ ul.navbox {
 }
 
 #achievement-list {
+    color: white;
     padding: 10px;
     overflow-x: hidden;
     overflow-y: auto;
-    width: 81vw;
-    background-color: rgb(35, 35, 35);
     flex-wrap: wrap;
+    justify-content: center;
+}
+
+#achievement-list>p {
+    color: white;
+    font-size: 20px;
+    width: 100%;
 }
 
 #achievement-list li {
@@ -199,12 +230,16 @@ ul.navbox {
     width: 80px;
 }
 
+#achievement-list img[src=''] {
+    height: 80px;
+}
+
 #achievement-list li:hover img {
     position: relative;
     top: -5px;
 }
 
-#achievement-container {
+#achievement-unlock-container {
     pointer-events: none;
     list-style: none;
     width: 100vw;
@@ -213,7 +248,6 @@ ul.navbox {
     align-items: center;
     z-index: 3;
     position: absolute;
-    top: 0;
 }
 
 #achievement-infor {
@@ -225,19 +259,12 @@ ul.navbox {
 }
 
 /* shop */
-#shop {
-    overflow-y: auto;
-}
-
 #shop li {
-    position: relative;
     background-color: white;
     border: 1px solid;
     padding: 10px;
     display: flex;
     align-items: center;
-    width: 400px;
-    margin-bottom: 5px;
 }
 
 #shop li:hover>.stats {
@@ -264,14 +291,68 @@ ul.navbox {
     padding: 3px;
 }
 
+/* chat */
+#chat {
+    flex-direction: column;
+}
+
+#chat-list {
+    overflow-y: auto;
+    border: 1px solid;
+    background-color: white;
+    list-style: none;
+    height: 100%;
+    font-size: 20px;
+}
+
+#chat-form {
+    border: 1px solid;
+    display: flex;
+    background-color: white;
+}
+
+#chat-form input {
+    padding: 10px;
+    padding-right: 0px;
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 20px;
+}
+
+#chat-form button {
+    padding: 10px;
+    background-color: transparent;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    color: rgb(62, 62, 255);
+}
+
 /* footer */
 #footer {
-    display: flex;
-    color: gray;
+    margin-left: 9px;
     position: absolute;
     bottom: 0;
+    display: flex;
+    color: grey;
+}
+
+#footer li a {
+    color: grey;
+    text-decoration: none;
+}
+
+#footer li a:hover {
+    text-decoration: underline;
 }
 
 #footer li {
-    margin-left: 25px;
+    margin-left: 30px;
+    padding-left: 10px;
+}
+
+#footer li:nth-child(1) {
+    margin-left: 0;
+    padding-left: 0;
 }
