--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
 }
 
 #flush {
+    width: 60%;
     display: none;
     background-image: url('img/flush.gif');
     z-index: 999;
@@ -255,7 +256,7 @@
 #achievement-unlock-container {
     pointer-events: none;
     list-style: none;
-    width: 100vw;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
